# VPMPackageAutoInstaller

./: .gitignore  .gitmodules  .something-releaser.json  Cargo.toml  README.md  creator.mjs  index.html  installer-template.unitypackage
.github/workflows/: activation.yml  ci.yml  release.yml  vrc-get-branch-updates.yml
Assets/: InstallerTester.cs
Assets/InstallerSource/: BurstPatch.cs  LibLoader.cs  MiniVpm.cs  NativeUtils.cs  SimpleJson.cs  SyncedTask.cs  VPMPackageAutoInstaller.cs  com.anatawa12.vpm-package-auto-installer.source.asmdef  semver.net
Assets/InstallerSource/DllBuild~/: .gitignore  Directory.Build.props  UnityEditor.Header.cs  (+8 more)
Assets/Tester/: CsUtilsTest.cs  InstallerTester.cs  JsonTest.cs  UnityVersionTest.cs  VersionTest.cs  com.anatawa12.auto-package-installer.tester.asmdef  com.anatawa12.vpm-package-auto-installer.tester.asmdef
Assets/com.anatawa12.auto-package-installer/: AutoPackageInstaller.cs  com.anatawa12.auto-package-installer.asmdef  config.json
Assets/com.anatawa12.vpm-package-auto-installer/: VPMPackageAutoInstaller.cs  config.json  libvrc_get_vpai.dylib
ProjectSettings/: ProjectSettings.asset
booth/: README.md  thumbnail-1.afphoto
booth/zip/: README.ja.txt  create.sh
building/: build-unitypackage.py  build.sh  config.json  index.html  main.mjs
creator/: .gitignore  creator.mjs  index.html  main.mjs  pack-for-test.sh
creator/rust/: Cargo.toml
creator/rust/src/: lib.rs  main.rs
creator/worker/: .gitignore  Cargo.toml  wrangler.toml
src/: lib.rs  main.rs
vrc-get/: Cargo.toml
vrc-get/src/: lib.rs  reqwest_cs.rs
(+14 files in other folders)
