[package]
name = "vpai-creator"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
flate2 = "1.0.26"
log = "0.4.17"
minify = "1.3.0"
reqwest = { version = "0.11.17", features = ["blocking"] }
tar = { version = "0.4.38", default-features = false }

