[package]
name = "vpai-creator"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
minify = "1.3.0"
tar = { version = "0.4.38", default-features = false }

# dependencies for binary distribution
env_logger = { version = "0.10.0", optional = true, default-features = false }
reqwest = { version = "0.11.17", features = ["blocking"], optional = true }

[lib]
crate_type = ["cdylib", "rlib"]

[[bin]]
name = "vpai-creator"
required-features = ["reqwest", "env_logger"]
