[package]
name = "vpai-creator"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
tar = { version = "0.4.38", default-features = false }

[lib]
crate_type = ["cdylib"]

[[bin]]
name = "vpai-creator"

[profile.release]
opt-level = "s"
lto = true
debug = 0
strip = true
